# fullstackin_seminars

./: README.md  index.html  logic.js  pyproject.toml
api/: main.py  settings.py
templates/: base.html  homepage.html
